Started working on Backend

--- a/src/scss/abstracts/colors.scss
+++ b/src/scss/abstracts/colors.scss
@@ -22,3 +22,13 @@ $black-gradient-down: linear-gradient(
 
 //Borders
 $cyan-gradient-border: linear-gradient(0deg, #0000ff, #00ffff) border-box;
+
+
+//Backgrounds
+
+
+//Dark Theme
+$dark-primary: #121316;
+$dark-secondary: #A6A7A8;
+$dark-tertiary: #212225;
+$dark-quaternary: #191A1D;
