--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -4,8 +4,8 @@ h2 {
   color: colors.$text-secondary;
   font-size: 2rem;
   text-align: center;
-  margin-top: 1em;
-  margin-bottom: 1em;
+  margin-top: .6em;
+  margin-bottom: .2em;
 }
 
 .underHeader {
