--- a/src/scss/mediaQuery/HomePageMedia.scss
+++ b/src/scss/mediaQuery/HomePageMedia.scss
@@ -14,7 +14,7 @@
 
 @media (max-width: 980px) {
   .HeroSection {
-    margin-top: 150px;
+    margin-top: unset!important;
     height: 400px;
 
     .heroImg {
