--- a/src/scss/layouts/Header.scss
+++ b/src/scss/layouts/Header.scss
@@ -76,72 +76,92 @@
 
 // Mobile Navigation
 .Header {
+  height: auto;
+  background: unset;
+  background-color: abstracts.$black;
   .mobileMenu {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 12px 10px;
     .logo {
-      margin-top: 15px;
-      margin-bottom: 5px;
-      height: 100px;
+      height: 90px!important;
+      width: 30%;
       img {
-        height: 100%;
+        height: 100%!important;
+        width: 100%;
         object-fit: contain;
       }
     }
 
-    .row {
+    .column {
+      height: 100%;
+      width: 70%;
       display: flex;
-      align-items: center;
       flex-direction: column;
-      .SearchForPackage {
+      justify-content: space-evenly;
+      align-items: center;
+      padding: 0 0 0 10px;
+      .row {
         width: 100%;
-        max-width: 400px;
-        margin-inline: auto;
-        display: flex;
-        input {
-          width: 75%;
+        .SearchForPackage {
+          width: 100%;
+          margin-inline: auto;
+          display: flex;
+          height: 36px;
+          input {
+            height: 100%;
+            width: calc(85% - 10px);
+          }
+          button {
+            height: 100%;
+            width: calc(15% + 10px);
+            color: transparent;
+            background-position: center center;
+          }
         }
-        button{
-          width: 25%;
-        }
-      }
 
-      .buttons {
-        margin-top: 10px;
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        max-width: 400px;
-        .left {
-          width: 86%;
-          .placeOrder {
-            width: 100%;
-            border: none;
-            height: 32px;
-            padding: 0 20px;
-            background-color: abstracts.$transparent-bg;
-            border-radius: 50px;
-            font-size: 14px;
-            transition: 0.4s ease-in-out;
-            a {
-              color: abstracts.$white;
-              text-decoration: none;
+        .buttons {
+          display: flex;
+          justify-content: space-between;
+          width: 100%;
+          .left {
+            width: 85%;
+            padding-right: 10px;
+            .placeOrder {
+              width: 100%;
+              border: none;
+              height: 36px;
+              padding: 0 20px;
+              background-color: abstracts.$transparent-bg;
+              border-radius: 50px;
+              font-size: 14px;
+              transition: 0.4s ease-in-out;
+              a {
+                color: abstracts.$white;
+                text-decoration: none;
+              }
+            }
+            .placeOrder:hover {
+              background-color: abstracts.$transparent-bg-hover;
             }
           }
-          .placeOrder:hover {
-            background-color: abstracts.$transparent-bg-hover;
-          }
-        }
 
-        .right {
-          width: 10%;
-          input {
-            display: none;
-          }
-          label {
-            img {
-              width: 32px;
-              height: 32px;
-              object-fit: contain;
-              cursor: pointer;
+          .right {
+            height: 36px;
+            width: 15%;
+            display: flex;
+            justify-content: right;
+            input {
+              display: none;
+            }
+            label {
+              img {
+                height: 100%;
+                object-fit: contain;
+                cursor: pointer;
+              }
             }
           }
         }
@@ -157,13 +177,14 @@
       ul {
         list-style: none;
         li {
+          margin-top: 10px;
           display: flex;
           justify-content: center;
           a {
             margin: auto;
             color: abstracts.$white;
             text-decoration: none;
-            font-size: 18px;
+            font-size: 20px;
             transition: 0.4s ease-in-out;
           }
         }
@@ -172,9 +193,27 @@
 
     .row:has(.hamburger:checked) {
       .navigation {
-        height: 120px;
+        height: 185px;
         display: block;
       }
+    }
+  }
+}
+
+
+// Show Proper Menu
+@media (min-width: 980px) {
+  .Header {
+    .mobileMenu {
+      display: none !important;
+    }
+  }
+}
+
+@media (max-width: 980px) {
+  .Header {
+    .desktopMenu {
+      display: none !important;
     }
   }
 }
