--- a/src/scss/abstracts/colors.scss
+++ b/src/scss/abstracts/colors.scss
@@ -32,3 +32,6 @@ $dark-primary: #121316;
 $dark-secondary: #A6A7A8;
 $dark-tertiary: #212225;
 $dark-quaternary: #191A1D;
+
+//Notifications
+$bg-error: #ff0000;
