--- a/src/scss/pages/LoginRegisterPage.scss
+++ b/src/scss/pages/LoginRegisterPage.scss
@@ -98,7 +98,16 @@
         cursor: pointer;
     }
 
-
+    .error{
+      background-color: abstracts.$bg-error;
+      width: 100%;
+      margin: 20px 0;
+      padding: 8px;
+      border-radius: 8px;
+      text-align: center;
+      font-size: .8rem;
+      font-weight: 600;
+    }
 
   }
 }
