--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -1,3 +1,5 @@
+@use "../abstracts";
+
 * {
   margin: 0px;
   padding: 0px;
@@ -15,6 +17,10 @@ body {
   line-height: 1.6;
   background-color: #000;
   overflow-x: hidden;
+}
+
+body.crm{
+  background-color: abstracts.$dark-primary;
 }
 
 main {
