Added SideBar Menu with Filters

--- a/src/scss/abstracts/colors.scss
+++ b/src/scss/abstracts/colors.scss
@@ -38,3 +38,8 @@ $Red: #ff0000;
 $Blue: #3f8aff;
 $Teal: #30e3df;
 $Violet: #c67ace;
+
+//Fonts
+$PrimaryFontSize: 12px;
+$SecondaryFontSize: 13px;
+$TertiaryFontSize: 11px;
