--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,6 +1,6 @@
 @forward "SearchForPackage";
 @forward "ContactForm";
-@forward "SideBar";
+@forward "SideBars";
 @forward "Footer";
 @forward "Header";
 @forward "ControlHeader";
