Added Filters for dashboard

--- a/src/scss/pages/DashboardPage.scss
+++ b/src/scss/pages/DashboardPage.scss
@@ -86,6 +86,8 @@
         }
 
         .tbody {
+          height: calc(100vh - 200px);
+          overflow-y: auto;
           .tr {
             display: flex;
             flex-direction: column;
