--- a/src/scss/components/SideBars.scss
+++ b/src/scss/components/SideBars.scss
@@ -46,6 +46,7 @@ $Violet: abstracts.$Violet;
       border: none;
       border-radius: 6px;
       padding: 6px 13px;
+      padding-left: 32px;
       background-image: url("/icons/searchIcon.png");
       background-repeat: no-repeat;
       background-position: 13px center;
@@ -54,7 +55,6 @@ $Violet: abstracts.$Violet;
     }
 
     .searchBar::placeholder {
-      padding-left: 22px;
       font-size: $PrimaryFontSize;
     }
 
@@ -130,6 +130,11 @@ $Violet: abstracts.$Violet;
       }
 
       .divWithText {
+        .tile.search{
+          margin-top: 10px;
+          cursor: pointer;
+        }
+
         .info {
           padding-left: 13px;
           font-size: $TertiaryFontSize;
@@ -300,7 +305,7 @@ $Violet: abstracts.$Violet;
       }
 
       .expand3 {
-        height: 110px;
+        height: 146px;
       }
 
       .expand4{
