--- a/src/scss/components/ControlHeader.scss
+++ b/src/scss/components/ControlHeader.scss
@@ -5,6 +5,25 @@
   display: flex;
   flex-direction: column;
 
+  .navigation {
+    width: 100%;
+    margin-top: 35px;
+    display: flex;
+    a {
+      margin-right: 20px;
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+      color: abstracts.$white;
+      img {
+        width: 22px;
+        height: 22px;
+        margin-right: 3px;
+        object-fit: contain;
+      }
+    }
+  }
+
   .backToDashboard {
     display: flex;
     align-items: center;
@@ -23,8 +42,8 @@
     }
   }
 
-  .backToDashboard:hover{
-    p{
+  .backToDashboard:hover {
+    p {
       margin-left: 0px;
     }
   }
@@ -34,6 +53,10 @@
     font-size: 2rem;
     font-weight: 500;
     color: #fff;
+
+    &.admin {
+      margin-top: 25px;
+    }
   }
 
   .info {
