--- a/src/scss/pages/newOrderPage.scss
+++ b/src/scss/pages/newOrderPage.scss
@@ -217,6 +217,7 @@
       }
 
       .cancelOrder{
+        min-width: unset;
         width: 120px;
         height: 28px;
         font-size: 12px;
