--- a/src/scss/components/ControlHeader.scss
+++ b/src/scss/components/ControlHeader.scss
@@ -29,6 +29,7 @@
     align-items: center;
     cursor: pointer;
     text-decoration: none;
+    width: 140px;
     img {
       width: 20px;
       height: 20px;
