--- a/src/scss/pages/ClientsPage.scss
+++ b/src/scss/pages/ClientsPage.scss
@@ -92,6 +92,7 @@
           padding: 6px 12px;
           background-color: abstracts.$dark-secondary;
           border-radius: 6px;
+          margin-top: 6px;
           .userId,
           .companyName,
           .companyNip,
