Added Settings Page

--- a/src/scss/abstracts/colors.scss
+++ b/src/scss/abstracts/colors.scss
@@ -31,7 +31,8 @@ $gray: #444345;
 $bg-error: #ff0000;
 
 //Colors
-$Green: #24ff00;
+// $Green: #24ff00;
+$Green: #85EF47;
 $Yellow: #f7be16;
 $Orange: #f77e21;
 $Red: #ff0000;
