--- a/src/scss/pages/newOrderPage.scss
+++ b/src/scss/pages/newOrderPage.scss
@@ -142,54 +142,55 @@
             height: 100%;
             width: 100%;
             overflow-y: auto;
-          }
-          table {
-            margin-top: 20px;
-            width: 100%;
-            height: 180px;
-            overflow-y: hidden;
-            tbody {
-              height: 100%;
+
+            table {
+              margin-top: 20px;
+              width: 100%;
+              height: 180px;
               overflow-y: hidden;
-              tr {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                height: 30px;
-                margin-top: 6px;
-                td {
-                  height: 100%;
-                  padding: 0px 4px;
-                  img {
+              tbody {
+                overflow-y: hidden;
+                tr {
+                  display: flex;
+                  justify-content: space-between;
+                  align-items: center;
+                  height: 30px;
+                  margin-top: 6px;
+                  td {
                     height: 100%;
-                    object-fit: contain;
+                    padding: 0px 4px;
+                    font-size: 14px;
+                    img {
+                      height: 100%;
+                      object-fit: contain;
+                    }
                   }
-                }
 
-                td:first-child {
-                  width: 15%;
-                }
+                  td:first-child {
+                    width: 15%;
+                  }
 
-                td:nth-child(2) {
-                  width: 55%;
-                }
+                  td:nth-child(2) {
+                    width: 55%;
+                  }
 
-                td:nth-child(3) {
-                  border-right: none;
-                  width: 23%;
-                }
+                  td:nth-child(3) {
+                    border-right: none;
+                    width: 23%;
+                  }
 
-                td:nth-child(4) {
-                  border-right: none;
-                  padding: 4px;
-                  width: 7%;
-                  transition: 0.4s linear;
-                  cursor: pointer;
-                }
+                  td:nth-child(4) {
+                    border-right: none;
+                    padding: 4px;
+                    width: 7%;
+                    transition: 0.4s linear;
+                    cursor: pointer;
+                  }
 
-                td:nth-child(4):hover {
-                  border-radius: 50px;
-                  background-color: abstracts.$transparent-text;
+                  td:nth-child(4):hover {
+                    border-radius: 50px;
+                    background-color: abstracts.$transparent-text;
+                  }
                 }
               }
             }
