Added generate labels PDF

--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -5,4 +5,5 @@
 @forward "DriversPage";
 @forward "ClientsPage";
 @forward "SettingsPage";
-@forward "Waybill";
+@forward "PDFWaybill";
+@forward "PDFLabel";
