Added Tracking Page

--- a/src/scss/components/Header.scss
+++ b/src/scss/components/Header.scss
@@ -3,6 +3,7 @@
 // Desktop Header
 .Header {
   height: 120px;
+  padding: 10px 0;
   width: 100%;
   background: abstracts.$black-gradient-down;
   display: flex;
