--- a/src/scss/pages/HomePage.scss
+++ b/src/scss/pages/HomePage.scss
@@ -1,7 +1,7 @@
 @use "../abstracts";
 
 .HeroSection {
-  margin-top: -120px;
+  margin-top: -40px;
   width: 100%;
   height: 500px;
   position: relative;
@@ -334,6 +334,14 @@
   }
 }
 
+.HeroSection,
+.OfferSection,
+.ServiceSection,
+.PriceSection,
+.ContactSection {
+  scroll-margin-top: 120px;
+}
+
 @media (max-width: 1200px) {
   .OfferSection {
     .offerCards {
@@ -349,6 +357,14 @@
 }
 
 @media (max-width: 980px) {
+  .HeroSection,
+  .OfferSection,
+  .ServiceSection,
+  .PriceSection,
+  .ContactSection {
+    scroll-margin-top: 320px;
+  }
+
   .HeroSection {
     margin-top: unset !important;
     height: 400px;
