--- a/src/scss/pages/RestartPasswordPage.scss
+++ b/src/scss/pages/RestartPasswordPage.scss
@@ -1,62 +1,65 @@
 @use "../abstracts";
 
-.ResetPassword{
+.ResetPassword {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  form {
     display: flex;
-    justify-content: center;
-    align-items: center;
-
-    form{
-        display: flex;
-        flex-direction: column;
-        position: relative;
-        height: 200px;
-        width: 300px;
-        padding: 20px;
-        h1{
-            font-size: 24px;
-        }
-
-        label{
-            margin-top: 6px;
-            font-size: 14px;
-        }
-
-        input{
-            margin-top: 6px;
-            padding: 6px 12px;
-            border-radius: 4px;
-            border: 1px solid abstracts.$dark-secondary;
-            outline: none;
-        }
-
-        button{
-            margin-top: 12px;
-            padding: 6px 12px;
-            border-radius: 4px;
-            border: 1px solid abstracts.$dark-secondary;
-            outline: none;
-            background-color: abstracts.$dark-primary;
-            cursor: pointer;
-        }
-
-        .success,
-        .error{
-            font-size: 14px;
-            margin-top: 6px;
-            text-align: center;
-        }
-
-        .success{
-            color: abstracts.$Green;
-        }
-
-        .error{
-            color: abstracts.$Red;
-        }
-        
+    flex-direction: column;
+    position: relative;
+    height: 200px;
+    width: 300px;
+    padding: 20px;
+    h1 {
+      font-size: 24px;
+      color: abstracts.$white;
     }
 
-    form::before{
-        @include abstracts.gradientBorder;
+    label {
+      margin-top: 6px;
+      font-size: 14px;
+      color: abstracts.$white;
     }
+
+    input {
+      margin-top: 6px;
+      padding: 6px 12px;
+      border-radius: 4px;
+      border: 1px solid abstracts.$dark-secondary;
+      outline: none;
+      color: abstracts.$white;
+    }
+
+    button {
+      margin-top: 12px;
+      padding: 6px 12px;
+      border-radius: 4px;
+      border: 1px solid abstracts.$dark-secondary;
+      outline: none;
+      background-color: abstracts.$dark-primary;
+      cursor: pointer;
+      color: abstracts.$white;
+    }
+
+    .success,
+    .error {
+      font-size: 14px;
+      margin-top: 6px;
+      text-align: center;
+    }
+
+    .success {
+      color: abstracts.$Green;
+    }
+
+    .error {
+      color: abstracts.$Red;
+    }
+  }
+
+  form::before {
+    @include abstracts.gradientBorder;
+  }
 }
