--- a/src/scss/pages/newOrderPage.scss
+++ b/src/scss/pages/newOrderPage.scss
@@ -47,6 +47,10 @@
         justify-content: center;
         align-items: center;
 
+        & > p {
+          color: abstracts.$white;
+        }
+
         &.stage3 {
           textarea {
             height: 28px;
@@ -98,6 +102,7 @@
             max-width: 100%;
             border-radius: 4px;
             text-align: center;
+            color: abstracts.$white;
           }
 
           textarea {
@@ -160,6 +165,7 @@
                     height: 100%;
                     padding: 0px 4px;
                     font-size: 14px;
+                    color: abstracts.$white;
                     img {
                       height: 100%;
                       object-fit: contain;
