Removed "Pobranie" from filters

--- a/src/scss/components/SideBars.scss
+++ b/src/scss/components/SideBars.scss
@@ -263,7 +263,7 @@ $Violet: abstracts.$Violet;
         }
 
         .realized {
-          width: 120px;
+          width: 100%;
           border-color: $Green;
           color: $Green;
         }
@@ -287,7 +287,7 @@ $Violet: abstracts.$Violet;
         }
 
         .canceled {
-          width: 95px;
+          width: 120px;
           border-color: $Red;
           color: $Red;
         }
